--- a/Gemfile.edge
+++ b/Gemfile.edge
@@ -1,6 +1,10 @@
-source 'http://rubygems.org'
+source 'https://rubygems.org'
 
 gemspec
 
 gem 'rails', github: 'rails/rails', branch: 'master'
 gem 'arel', github: 'rails/arel', branch: 'master'
+
+platforms :rbx do
+  gem 'rubysl', '~> 2.0'
+end
